# ArduinoCmake

./: .gitignore  LICENSE  README.md  acmake.py  pyproject.toml
src/acmake/: __init__.py  __main__.py  board_list.py  build.py  build_options_json.py  cache_compile.py  cache_invalidate.py  cli.py  cmakegen.py  command.py  config.py  discovery.py  fqbn.py  hooks.py  libraries.py  logging_util.py  parse_txt.py  properties.py  response_files.py  size_report.py  sketch.py  sources.py  upload.py
tests/: test_build_cached_lib_includes.py  test_build_objects.py  test_build_options_json.py  test_cache_compile.py  test_cache_invalidate.py  test_cli_build_dir.py  test_cli_configure.py  test_cmakegen_combine.py  test_cmakegen_depfile.py  test_cmakegen_link_order.py  test_cmakegen_objcopy.py  test_cmakegen_shared_lib_deps.py  test_cmakegen_sketch_include_strip.py  test_command.py  test_compiler_warnings.py  test_config_paths.py  test_discovery_platform_dir.py  test_discovery_sketch_hardware.py  test_fqbn.py  test_golden.py  test_hooks.py  test_libraries.py  test_object_cache.py  test_properties.py  test_response_files.py  test_size_report.py  test_sketch.py  test_upload.py
tools/: gen_arduino_cmake_portable.py
